# Ingest-Service

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  README.md
data/: data_sample.csv
scripts/: send_sample.sh
src/: batcher.cpp  batcher.h  http_ingest_server.cpp  http_ingest_server.h  ingest_queue.hpp  interfaces.hpp  main.cpp  parser_worker.cpp  parser_worker.h  writer.cpp  writer.h
uml/: architecture.puml  class.puml  sequence.puml
